--- a/index.html
+++ b/index.html
@@ -7,16 +7,95 @@ doctype <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Jeremy Houtz Web Developer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.google.com/css$family=Noto+Sans|Roboto+Mono&display=swap">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
-        <script src="" async defer></script>
+        <div class="container">
+            <div class="intro">
+                <img class="profile-picture" src="images/profile pic 2.jpg" alt="">
+                <h1>Jeremy Houtz</h1>
+                <h3>Front End Web Developer</h3>
+                <p class="quote">{{ pause and ponder }}</p>
+            </div>
+            <hr />
+            <div class="about-grid">
+                <div class="i-am">
+                    <h3>I am</h3>
+                    <ul class="about-list">
+                        <li>A Husband</li>
+                        <li>A Father</li>
+                        <li>An Engineer</li>
+                        <li>A Coach</li>
+                    </ul>
+                </div>
+                <div class="i-like">
+                    <h3>I like to</h3>
+                    <ul class="about-list">
+                        <li>Exercise</li>
+                        <li>Coach</li>
+                        <li>Listen to music</li>
+                        <li>Learn new things</li>
+                    </ul>
+                </div>
+            </div>
+            <hr />
+            <div>
+                <h3 class="projects-heading">My Projects</h3>
+                <div class="projects-grid">
+                    <div class="project">
+                        <img src="images/project-1.jpg" alt="" class="project-image">
+                        <h4 class="project-heading">Project 1</h4>
+                    </div>
+                    <div class="project">
+                        <img src="images/project-2.jpg" alt="" class="project-image">
+                        <h4 class="project-heading">Prject 2</h4>
+                    </div>
+                    <div class="project">
+                        <img src="images/project-3.jpg" alt="" class="project-image">
+                        <h4 class="project-heading">Project 3</h4>
+                    </div>
+                    <div class="project">
+                        <img src="images/project-4" alt="" class="project-image">
+                        <h4 class="project-heading">Project 4</h4>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <div class="links-grid">
+                <div class="links">
+                    <h3>Links</h3>
+                    <ul class="links-list">
+                        <li>
+                            <a href="https://github.com/jeremyhoutz">GitHub</a>
+                            <a href="https://twitter.com/jeremyhoutz">Twitter</a>
+                            <a href="https://linkedin.com/in/jeremyhoutz"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <form action="#">
+                        <label for="email">
+                            <h4>Email: </h4>
+                            <input type="email" id="email" placeholder="Enter your email">
+                        </label>
+                        <label for="message">
+                            <h4>Message: </h4>
+                            <textarea name="message" id="message">Your message</textarea>
+                        </label>
+                        <div class="submit-button-wrapper">
+                            <input type="submit" value="Send Message" id="submit-button">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <script src="" async defer></script>
+        </div>
     </body>
 </html>
