Added an image folder and profile picture

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <![endif]-->
         <div class="container">
             <div class="intro">
-                <img class="profile-picture" src="images/profile pic 2.jpg" alt="">
+                <img class="profile-picture" src="images/profile_pic.jpg" alt="">
                 <h1>Jeremy Houtz</h1>
                 <h3>Front End Web Developer</h3>
                 <p class="quote">{{ pause and ponder }}</p>
