--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://fonts.google.com/css$family=Noto+Sans|Roboto+Mono&display=swap">
+        <link rel="stylesheet" href="https://fonts.google.com/css$family=Noto|Roboto&display=swap">
     </head>
     <body>
         <!--[if lt IE 7]>
