Typo correction line 58

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="project">
                         <img src="images/project-2.jpg" alt="" class="project-image">
-                        <h4 class="project-heading">Prject 2</h4>
+                        <h4 class="project-heading">Project 2</h4>
                     </div>
                     <div class="project">
                         <img src="images/project-3.jpg" alt="" class="project-image">
